2012-02-16 Pierre Wieser <pwieser@trychlos.org>

	* src/plugin-tracker/Makefile.am: Always build and distribute all flavors
	of D-Bus sources.

2012-02-15 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-ischemes-tab.c (on_main_selection_changed):
	* src/nact/nact-imimetypes-tab.c (on_main_selection_changed):
	* src/nact/nact-ifolders-tab.c (on_main_selection_changed):
	* src/nact/nact-icapabilities-tab.c (on_main_selection_changed):
	* src/nact/nact-ibasenames-tab.c (on_main_selection_changed):
	Enable the tab if a context is available.

	* src/nact/nact-iproperties-tab.c (on_main_selection_changed):
	* src/nact/nact-iexecution-tab.c (on_main_selection_changed):
	* src/nact/nact-ienvironment-tab.c (on_main_selection_changed):
	* src/nact/nact-icommand-tab.c (on_main_selection_changed):
	* src/nact/nact-iaction-tab.c (on_main_selection_changed):
	Slightly review the code layout.

	* src/nact/nact-main-window.c (setup_current_selection):
	Setup the context of the current profile if any.

	* src/nact/nact-menubar-priv.h:
	* src/nact/nact-menubar.c (instance_dispose): Disconnect signal handler.

	* src/nact/base-window.c (instance_dispose): Improve debug message.

	* src/nact/nact-menubar-edit.c
	(nact_menubar_edit_on_update_sensitivities): Do not evaluate writability
	if an action is not selected.

	* src/nact/nact-menubar.c
	(nact_menubar_new, on_ui_manager_proxy_connect): Review code layout.

2012-02-14 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nautilus-actions-config-tool.ui: Remove halign property only
	avaliable since Gtk 3.0.

	* src/nact/base-gtk-utils.c (base_gtk_utils_table_to_grid):
	Improve table to grid conversion, adding spacing and expand properties.

	* src/nact/nautilus-actions-config-tool.ui: Updated accordingly.

	* src/nact/nact-menubar-edit.c (get_deletables):
	Check if action is writable when deleting a profile.

	* src/core/na-object-action.c (ifactory_object_read_done):
	* src/core/na-object-menu.c (ifactory_object_read_done):